# overmind

./: .editorconfig  .gitignore  .shellcheckrc  AGENTS.md  README.md  biome.json  package.json  pyproject.toml  tsconfig.json
.agents/skills/discover-accounts/: SKILL.md
.agents/skills/filter-follows/: SKILL.md
.agents/skills/memory-defrag/: SKILL.md
.agents/skills/memory-reflect/: SKILL.md
.agents/skills/post-content/: SKILL.md
.agents/skills/social-config/: SKILL.md
.agents/skills/vibeslop.pitch/: SKILL.md
.agents/skills/vibeslop.score/: SKILL.md
.agents/skills/vibeslop.ship/: SKILL.md
.agents/skills/vibeslop.sketch/: SKILL.md
.claude/commands/: discover-accounts.md  filter-follows.md  memory-defrag.md  memory-reflect.md  post-content.md  social-config.md
.git-ignored/: README.md
.github/agents/: somnabulist.agent.md
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
knowledge/: README.md
knowledge/playbooks/social-media/: README.md
knowledge/playbooks/vscode-local-llm/: README.md
memory/: active-context.md  context-repository.md
memory/playbooks/social-media/: README.md
projects/: README.md
scripts/: build-system-prompt.sh  overmind  overmind.sh
tools/: README.md  check.sh  migrate_post_log.py  overmind_social_skills_memory.py  refresh_engagement.py
